# bebop_vel_ctrl

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: bebop_vel_ctrl.yaml  log710_metric.yaml  sample_trajectory.yaml
include/bebop_vel_ctrl/: bebop_vel_ctrl.h  bebop_vel_model.h
launch/: bebop_teleop.launch  bebop_trajectory_generator.launch  bebop_vel_ctrl.launch
msg/: Debug.msg
scripts/: generate_trajectory.py
src/: bebop_vel_ctrl.cpp  bebop_vel_ctrl_node.cpp  bebop_vel_model.cpp
