<?xml version="1.0"?>
<package>
  <name>bebop_vel_ctrl</name>
  <version>1.2.0</version>
  <description>Velocity controller for Parrot Bebop</description>
  <maintainer email="mmonajje@sfu.ca">Mani Monajjemi</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/bebop_vel_ctrl</url> -->


  <author email="mmonajje@sfu.ca">Mani Monajjemi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>bebop_msgs</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>bebop_msgs</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>bebop_tools</run_depend>

  <export>
  </export>
</package>
